--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -17,28 +17,50 @@
 .post-header .profile-username {
   margin-left: 10px;
 }
+
 .profile-username {
   font-weight: 600;
   font-size: 14px;
 }
 
 .post-header-right button {
-  background-color: #fafafa;
+  background: #fafafa;
 }
 
-.post-header .post-image {
+.post-image {
   display: flex;
 }
-.post-header .post-image img {
+
+.post-image img {
   object-fit: cover;
 }
+
 .post-bottom {
+  padding: 14px;
   display: flex;
-  padding: flex;
   flex-direction: column;
 }
+
 .post-like-count {
   font-size: 14px;
   font-weight: 600;
   margin: 6px 0;
+}
+
+.post-like-icon {
+  color: #ccc;
+}
+
+.post-like-icon.active {
+  color: red;
+}
+
+.post-content .post-text {
+  font-size: 14px;
+}
+
+.post-time {
+  font-size: 12px;
+  color: #ccc;
+  margin-top: 8px;
 }
